Better fix for homepage nav visibility.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -581,7 +581,6 @@
 			}
 
 	#nav {
-  	display: none;
 		cursor: default;
 		background-color: #333;
 		background-image: -moz-linear-gradient(top, rgba(0,0,0,0), rgba(0,0,0,0.3)), url("images/bg01.png");
